--- a/Starter/Properties/launchSettings.json
+++ b/Starter/Properties/launchSettings.json
@@ -1,60 +1,41 @@
 {
-  "profiles": {
-    "http": {
-      "commandName": "Project",
-      "launchBrowser": true,
-      "launchUrl": "swagger",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development",
-      },
-      "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:7604"
-    },
-    "https": {
-      "commandName": "Project",
-      "launchBrowser": true,
-      "launchUrl": "swagger",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7225;http://localhost:7045"
-    },
-    "IIS Express": {
-      "commandName": "IISExpress",
-      "launchBrowser": true,
-      "launchUrl": "swagger",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
-    "SelfHost": {
-      "commandName": "Project",
-      "launchBrowser": true,
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "applicationUrl": "https://localhost:7225;http://localhost:7045"
-    },
-    "Docker": {
-      "commandName": "Docker",
-      "launchBrowser": true,
-      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
-      "environmentVariables": {
-        "ASPNETCORE_URLS": "https://+;http://+"
-      },
-      "httpPort": 8000,
-      "DockerfileRunArguments": "-e ASPNETCORE_HTTPS_PORT=8001 -e ASPNETCORE_Kestrel__Certificates__Default__Password=\"crypticpassword\" -e ASPNETCORE_Kestrel__Certificates__Default__Path=\\https\\aspnetapp.pfx -v C:\\Users\\Administrator\\.aspnet\\https:C:\\https\\ --user ContainerAdministrator",
-      "sslPort": 8001,
-      "useSSL": true
-    }
-  },
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:51483/",
-      "sslPort": 44342
+      "applicationUrl": "http://localhost:7604",
+      "sslPort": 44347
+    }
+  },
+  "profiles": {
+    "Starter": {
+      "commandName": "Project",
+      "launchBrowser": false,
+      "applicationUrl": "https://localhost:7225;http://localhost:5028",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "ASPNETCORE_HOSTINGSTARTUPASSEMBLIES": "Microsoft.AspNetCore.SpaProxy"
+      }
+    },
+    "IIS Express": {
+      "commandName": "IISExpress",
+      "launchBrowser": false,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "ASPNETCORE_HOSTINGSTARTUPASSEMBLIES": "Microsoft.AspNetCore.SpaProxy"
+      }
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchBrowser": false,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+      "httpPort": 8000,
+      "DockerfileRunArguments": "-e ASPNETCORE_HTTPS_PORT=8225 -e ASPNETCORE_Kestrel__Certificates__Default__Password=\"crypticpassword\" -e ASPNETCORE_Kestrel__Certificates__Default__Path=\\https\\aspnetapp.pfx -v C:\\Users\\Administrator\\.aspnet\\https:C:\\https\\ --user ContainerAdministrator",
+      "environmentVariables": {
+        "ASPNETCORE_URLS": "https://+;http://+"
+      },
+      "sslPort": 8225,
+      "useSSL": true
     }
   }
 }
