Add docker.compose and Docker files

--- a/Starter/Starter.csproj
+++ b/Starter/Starter.csproj
@@ -43,11 +43,11 @@
 		<PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.5.0" />
 	</ItemGroup>
 
-	<ItemGroup>
+	<!--<ItemGroup>
 		<ProjectReference Include="..\ReactCoreUI\ReactCoreUI.esproj">
 			<ReferenceOutputAssembly>false</ReferenceOutputAssembly>
 		</ProjectReference>
-	</ItemGroup>
+	</ItemGroup>-->
 
 	<Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
 		<Exec Command="node --version" ContinueOnError="true">
