--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=.;Initial Catalog=Starter;User ID=sa;Password=123;Encrypt=True;TrustServerCertificate=True;MultipleActiveResultSets=true",
-    //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-DockConstruct-2cbe9e4d-28b7-4d38-bc85-2dd9e07d8e3a;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=.;Initial Catalog=Starter;User ID=sa;Password=123;Encrypt=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
