docker + build ui

--- a/ReactCoreUI/Dockerfile.ReactCoreUI
+++ b/ReactCoreUI/Dockerfile.ReactCoreUI
@@ -1,38 +1,39 @@
-FROM mcr.microsoft.com/windows/servercore:ltsc2022 as installer
+FROM mcr.microsoft.com/windows/servercore:ltsc2022 AS install
 
 SHELL ["powershell", "-Command", "$ErrorActionPreference = 'Stop';$ProgressPreference='silentlyContinue';"]
 
-RUN Invoke-WebRequest -OutFile nodejs.zip -UseBasicParsing "https://nodejs.org/dist/v20.10.0/node-v20.10.0-win-x64.zip"; Expand-Archive nodejs.zip -DestinationPath C:\; Rename-Item "C:\\node-v20.10.0-win-x64" c:\nodejs
-
-FROM mcr.microsoft.com/windows/nanoserver:ltsc2022
+RUN Invoke-WebRequest -OutFile nodejs.zip -UseBasicParsing "https://nodejs.org/dist/v18.14.0/node-v18.14.0-win-x64.zip"; Expand-Archive nodejs.zip -DestinationPath C:\; Rename-Item "C:\\node-v18.14.0-win-x64" c:\nodejs
 
 WORKDIR C:\\nodejs
-COPY --from=installer C:\\nodejs\\ C:\\Windows\\system32
+COPY --from=install C:\\nodejs\\ C:\\Windows\\system32
 RUN SETX PATH C:\nodejs
 RUN npm config set registry https://registry.npmjs.org/
 RUN npm --version
-
-WORKDIR /app
 
 # add `/app/node_modules/.bin` to $PATH
 # ENV PATH /app/node_modules/.bin:$PATH
 RUN SETX PATH C:\app\node_modules\.bin
 
+FROM mcr.microsoft.com/windows/nanoserver:ltsc2022 AS build
+WORKDIR /app
+# Copy ReactCoreUI source code to the image
+COPY ReactCoreUI/. ./
+
 # Install project dependencies
-COPY ReactCoreUI/package.json .
-COPY ReactCoreUI/package-lock.json ./
 RUN npm install --legacy-peer-deps
 
 # Build the ReactCoreUI application
+# ENV GENERATE_SOURCEMAP=false
+ENV NODE_OPTIONS=--max_old_space_size=8192
 RUN npm run build
 
-# Use the official Nginx image for Windows
+# Use the official IIS image for Windows as final stage
 FROM mcr.microsoft.com/windows/nanoserver:ltsc2022 AS final
-WORKDIR /nginx
-COPY --from=build /app/build /nginx
+WORKDIR /inetpub/wwwroot
+COPY --from=build /app/build ./
 
 # Expose the port on which ReactCoreUI will run
-EXPOSE 3000
+EXPOSE 44482
 
-# Start Nginx and serve the ReactCoreUI application
-CMD ["nginx", "-g", "daemon off;"]
+# Start IIS
+CMD ["cmd", "/c", "start", "C:\\ServiceMonitor.exe", "w3svc"]
