--- a/ReactCoreUI/package.json
+++ b/ReactCoreUI/package.json
@@ -53,19 +53,9 @@
     "ajv": "^8.12.0",
     "cross-env": "^7.0.3",
     "env-cmd": "^10.1.0",
-    "eslint": "^8.55.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-config-react-app": "^7.0.1",
-    "eslint-plugin-flowtype": "^8.0.3",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
     "nan": "^2.18.0",
-    "prettier": "3.2.2",
-    "react-scripts": "5.0.1",
+    "prettier": "3.2.4",
+    "react-scripts": "^5.0.1",
     "redux-thunk": "^3.1.0",
     "rimraf": "^5.0.5",
     "sass": "^1.69.7",
